# ufc_fight_predictor

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pre-processing.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  test.py
.github/: format.yml
api/: Dockerfile  main.py  requirements_api.txt
api/models/: dl.keras  model.json  model.xgb
backend/: docker-compose.yaml
data/: Dockerfile  add_data.py  bouts.csv  docker-compose.yaml  fighters.csv
data/data/: bouts.csv  fighters.csv
data_processing/: __init__.py  data_pipeline.py  data_pipeline_doubling_up.py  data_processing2.py
data_processing/data/: Dockerfile  add_data.py  requirements_add_data.txt
data_processing/data/data/: bouts.csv  bouts_double.csv  extract_data.ipynb  fighters.csv  fighters_cleaned.csv  odds.csv
notebooks/: feature_importance.csv  neural_net.ipynb  pre-processing.ipynb  pre-processing_extensive.ipynb  xgboost.ipynb
odds/: main.py
scrapers/: docker-compose.yaml  requirements.txt  requirements_scrapers.txt
scrapers/bout_scraper/: go-spider.py  requirements.txt  scrapy.cfg
scrapers/bout_scraper/bout_scraper/: items.py  models.py  pipelines.py  settings.py
scrapers/fighter_scraper/: Dockerfile  go-spider.py  scrapy.cfg
scrapers/future_bout_scraper/: Dockerfile  go-spider.py  scrapy.cfg
scrapers/sql/: init.sql
ufc_fight_predictor/: preprocessing.py
ufc_fight_predictor/data/: Dockerfile  add_data.py
ufc_fight_predictor/utils/: __init__.py  utils.py
web_app/: Dockerfile  requirements_web.txt  streamlit_app.py
(+16 files in other folders)
