[tool.poetry]
name = "ufc-fight-predictor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_processing"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.0.1"
sqlalchemy = "^1.4.43"
plotly = "^5.14.1"
numpy = "^1.24.3"
ipykernel = "^6.23.0"
psycopg2-binary = "^2.9.6"
black = "^23.3.0"
scrapy = "^2.9.0"
mlflow = "^2.7.1"
xgboost = "^2.0.0"
shap = "^0.43.0"
tensorflow = "^2.14.0"
optuna = "^3.4.0"
nbformat = "^5.9.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
